EASYOPAC-482 - Fix z-index.

--- a/themes/ddbasic/sass/module/_search.scss
+++ b/themes/ddbasic/sass/module/_search.scss
@@ -24,7 +24,7 @@ $search-border-type: solid;
   top: 0px;
   bottom: 0px;
   position: fixed;
-  z-index: 110;
+  z-index: 99;
 
   color: rgb(255, 255, 255);
   text-align: center;
